# 42_Matt_Daemon

./: .gitignore  CMakeLists.txt  Makefile
include/: Daemon.hpp  MattDaemon.hpp  Socket.hpp  SocketClient.hpp  SocketServer.hpp  TintinReporter.hpp
src/: CMakeLists.txt  Daemon.cpp  MattDaemon.cpp  Socket.cpp  SocketClient.cpp  SocketServer.cpp  TintinReporter.cpp  main.cpp
